--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Philosopher&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="/css/normalize.css" />
+		<link rel="stylesheet" href="/css/styles.css" />
 		<title>Hello</title>
 	</head>
 	<body>
-		<p>Hello World</p>
+		<header>
+			<h1 class="profile_name">Alan Crisanto Valladares</h1>
+		</header>
+		<img class="profile_photo" src="assets/alan-image.png" alt="Alan photo" />
+		<section class="details">
+			<div class="title">
+				<h3>WDD 230 Assignment Portal</h3>
+				<hr />
+			</div>
+			<div class="links_list">
+				<ul>
+					<li>Lesson 01: <a href="">Course Assignment Portal</a></li>
+					<li>Lesson 01: <a href="">Design Principles Document</a></li>
+				</ul>
+			</div>
+		</section>
+		<footer>
+			<div class="contact_info">
+				<p> &copy; 2022 | Alan Crisanto | Lima | <a href="">BYU Online Learning</a></p>
+				<p id="updated">Last</p>
+			</div>
+		</footer>
 	</body>
 </html>
