--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 		</section>
 		<footer>
 			<div class="contact_info">
-				<p> &copy; 2022 | Alan Crisanto | Lima | <a href="">BYU Online Learning</a></p>
-				<p id="updated">Last</p>
+				<p>
+					&copy; 2022 | Alan Crisanto | Lima | <a href="https://www.byui.edu/online">https://www.byui.edu/online</a></p
+				>
+				<p id="updated"></p>
 			</div>
 		</footer>
+		<script src="/scripts/index.js"></script>
 	</body>
 </html>
