--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 				<p id="updated"></p>
 			</div>
 		</footer>
-		<script src="/scripts/index.js"></script>
+		<script src="/JS/index.js"></script>
 	</body>
 </html>
