--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<header>
 			<h1 class="profile_name">Alan Crisanto Valladares</h1>
 		</header>
-		<img class="profile_photo" src="assets/alan-image.png" alt="Alan photo" />
+		<section class="profile_photo">
+			<img src="assets/alan-image.png" alt="Alan photo" />
+		</section>
 		<section class="details">
 			<div class="title">
 				<h3>WDD 230 Assignment Portal</h3>
