chore: meta added

--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 		<link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Philosopher&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="/css/normalize.css" />
 		<link rel="stylesheet" href="/css/styles.css" />
-		<title>Hello</title>
+		<title>Alan Crisanto Profile</title>
+		<meta
+			name="description"
+			content="Assignment portal for Alan Crisanto in WDD 230: Web Frontend Development at Brigham Young University - Idaho"
+		/>
 	</head>
 	<body>
 		<header>
 			<h1 class="profile_name">Alan Crisanto Valladares</h1>
 		</header>
-		<section class="profile_photo">
-			<img src="assets/alan-image.png" alt="Alan photo" />
-		</section>
+		<div class="profile_photo">
+			<img src="assets/alan-image.png" alt="Alan profile photo" />
+		</div>
 		<section class="details">
 			<div class="title">
-				<h3>WDD 230 Assignment Portal</h3>
+				<h2>WDD 230 Assignment Portal</h2>
 				<hr />
 			</div>
 			<div class="links_list">
@@ -33,7 +37,8 @@
 		<footer>
 			<div class="contact_info">
 				<p>
-					&copy; 2022 | Alan Crisanto | Lima | <a href="https://www.byui.edu/online">https://www.byui.edu/online</a></p
+					&copy; <span id="year"></span> | Alan Crisanto | Lima |
+					<a href="https://www.byui.edu/online">https://www.byui.edu/online</a></p
 				>
 				<p id="updated"></p>
 			</div>
