design principles page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			content="Assignment portal for Alan Crisanto in WDD 230: Web Frontend Development at Brigham Young University - Idaho"
 		/>
 	</head>
-	<body>
-		<header>
+	<body class="profile-body">
+		<header class="profile-header">
 			<h1 class="profile_name">Alan Crisanto Valladares</h1>
 		</header>
 		<div class="profile_photo">
@@ -30,11 +30,11 @@
 			<div class="links_list">
 				<ul>
 					<li>Lesson 01: <a href="">Course Assignment Portal</a></li>
-					<li>Lesson 01: <a href="">Design Principles Document</a></li>
+					<li>Lesson 01: <a href="/design-principles.html">Design Principles Document</a></li>
 				</ul>
 			</div>
 		</section>
-		<footer>
+		<footer class="profile-footer">
 			<div class="contact_info">
 				<p>
 					&copy; <span id="year"></span> | Alan Crisanto | Lima |
