chore: finished color scheme

--- a/lesson2/color-scheme.html
+++ b/lesson2/color-scheme.html
@@ -26,10 +26,12 @@
 		</header>
 		<main>
 			<section class="weather-plan-color">
+				<h2>Color Pallete</h2>
 				<figcaption class="weather-plan-img">
 					<img src="/lesson2/assets/images/color-schema.png" alt="color pallete" />
 				</figcaption>
 				<div class="weather-plan-list">
+					<h2>Elements Colors</h2>
 					<ul>
 						<li>Background Color: White </li>
 						<li>Header Background: #4b6584 </li>
