--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -35,7 +35,7 @@
 						<img class="weather-plan-log" src="/lesson2/assets/images/sun&cloud.png" alt="logo weather app" />
 					</figcaption>
 					<h3>Domain Name</h3>
-					<p>suncloud.com</p>
+					<p>sun&cloud.com</p>
 				</div>
 				<div class="description-card card">
 					<h2>Description</h2>
