--- a/lesson2/typography.html
+++ b/lesson2/typography.html
@@ -24,6 +24,11 @@
 			<hr />
 			<h1>Weather Planning Document</h1>
 		</header>
+		<main class="weather-plan-typography">
+			<h2>WeatherTypography</h2>
+			<p>font-family: 'Noto Sans', sans-serif;</p>
+			<p>font-family: 'Source Serif Pro', serif;</p>
+		</main>
 		<footer class="weather-plan-footer">
 			<div class="weather-plan-info">
 				<p>
