chore: wireframes added

--- a/lesson2/color-scheme.html
+++ b/lesson2/color-scheme.html
@@ -18,7 +18,7 @@
 					<li><a href="/lesson2/target-audience.html">Target Audience</a></li>
 					<li><a href="/lesson2/color-scheme.html">Color Scheme</a></li>
 					<li><a href="/lesson2/typography.html">Typography</a></li>
-					<li><a href="#">Wireframes Sketches</a></li>
+					<li><a href="/lesson2/wireframes.html">Wireframes Sketches</a></li>
 				</ul>
 			</nav>
 			<hr />
@@ -27,9 +27,9 @@
 		<main>
 			<section class="weather-plan-color">
 				<h2>Color Pallete</h2>
-				<figcaption class="weather-plan-img">
+				<div class="weather-plan-img">
 					<img src="/lesson2/assets/images/color-schema.png" alt="color pallete" />
-				</figcaption>
+				</div>
 				<div class="weather-plan-list">
 					<h2>Elements Colors</h2>
 					<ul>
@@ -58,6 +58,6 @@
 				<p id="updated"></p>
 			</div>
 		</footer>
+		<script src="/lesson2/JS/index.js"></script>
 	</body>
-	<script src="/lesson2/JS/index.js"></script>
 </html>
