--- a/lesson2/target-audience.html
+++ b/lesson2/target-audience.html
@@ -18,12 +18,64 @@
 					<li><a href="/lesson2/target-audience.html">Target Audience</a></li>
 					<li><a href="/lesson2/color-scheme.html">Color Scheme</a></li>
 					<li><a href="/lesson2/typography.html">Typography</a></li>
-					<li><a href="#">Wireframes Sketches</a></li>
+					<li><a href="/lesson2/wireframes.html">Wireframes Sketches</a></li>
 				</ul>
 			</nav>
 			<hr />
 			<h1>Weather Planning Document</h1>
 		</header>
+		<main class="weather-plan-container">
+			<section class="weather-plan-target-1">
+				<h2 class="weather-plan-target-h2">Target Audience</h2>
+				<p>
+					The target audience is all the people who are within the search area, as well as those who are outside, such
+					as tourists, businessmen, athletes who plan to visit the city, who want to know the climate of the city of
+					interest.
+				</p>
+			</section>
+
+			<section class="weather-plan-target-2">
+				<h2 class="weather-plan-target-h2">Persona</h2>
+				<ul class="weather-plan-target-ul">
+					<li>
+						Ryan Fairchild, 25-year-old. <br />
+						Extreme Cycling Athlete <br />
+						He is comfortable using different electronic devices, from mobile phones to desktop computers. <br />
+						He becomes familiar with the use of mobile applications that help him plan his sports routine.
+					</li>
+					<li>
+						Andrew Anderson, 40 year old <br />
+						Business executive Electronic devices: Laptop, mobile phone, Ipad.<br />
+						He is used to planning his business trips to different cities, using time applications he plans his travel
+						calendar.
+					</li>
+					<li>
+						Jessica O'Brien Age 24 years <br />
+						Student and traveler <br />
+						Preferred Electronic Devices: Mobile phone iPad <br />
+						Check weather news through weather applications of the places you travel to.
+					</li>
+				</ul>
+			</section>
+			<section class="weather-plan-target-3">
+				<h2 class="weather-plan-target-h2"> Scenarios </h2>
+				<ul class="weather-plan-target-ul">
+					<li
+						>Wedding planners need to plan outdoor or indoor wedding reception events to cater to guests. To do this,
+						they look for weather information.
+					</li>
+					<li
+						>Anna, has 2 weeks of vacation and wants to plan a destination in the mountains, she wants to know if she
+						should wear waterproof clothing, and to know what day will be clearer to take photos of the landscape
+					</li>
+					<li>
+						The entrepreneurs of a rural town use solar drying for their dehydrated fruit business, they seek to know
+						the state of the weather to mobilize their food dehydrators.
+					</li>
+					<li> Yoga students always check the weather to decide on their outdoor exercises. </li>
+				</ul>
+			</section>
+		</main>
 		<footer class="weather-plan-footer">
 			<div class="weather-plan-info">
 				<p>
@@ -33,6 +85,6 @@
 				<p id="updated"></p>
 			</div>
 		</footer>
+		<script src="/lesson2/JS/index.js"></script>
 	</body>
-	<script src="/lesson2/JS/index.js"></script>
 </html>
