--- a/lesson2/typography.html
+++ b/lesson2/typography.html
@@ -18,7 +18,7 @@
 					<li><a href="/lesson2/target-audience.html">Target Audience</a></li>
 					<li><a href="/lesson2/color-scheme.html">Color Scheme</a></li>
 					<li><a href="/lesson2/typography.html">Typography</a></li>
-					<li><a href="#">Wireframes Sketches</a></li>
+					<li><a href="/lesson2/wireframes.html">Wireframes Sketches</a></li>
 				</ul>
 			</nav>
 			<hr />
@@ -26,8 +26,8 @@
 		</header>
 		<main class="weather-plan-typography">
 			<h2>WeatherTypography</h2>
-			<p>font-family: 'Noto Sans', sans-serif;</p>
-			<p>font-family: 'Source Serif Pro', serif;</p>
+			<p>Primary: font-family - Noto Sans, sans-serif;</p>
+			<p>Secondary: font-family - Source Serif Pro, serif;</p>
 		</main>
 		<footer class="weather-plan-footer">
 			<div class="weather-plan-info">
@@ -38,6 +38,6 @@
 				<p id="updated"></p>
 			</div>
 		</footer>
+		<script src="/lesson2/JS/index.js"></script>
 	</body>
-	<script src="/lesson2/JS/index.js"></script>
 </html>
