--- a/lesson2/wireframes.html
+++ b/lesson2/wireframes.html
@@ -25,32 +25,12 @@
 			<h1>Weather Planning Document</h1>
 		</header>
 		<main>
-			<section class="cards">
-				<div class="name-log-card card">
-					<h2>Name and Logo</h2>
-					<h3>Name</h3>
-					<p>Sun&Cloud</p>
-					<h3>Logo</h3>
-					<div>
-						<img class="weather-plan-log" src="/lesson2/assets/images/sun&cloud.png" alt="logo weather app" />
-					</div>
-					<h3>Domain Name</h3>
-					<p>sun&cloud.com</p>
-				</div>
-				<div class="description-card card">
-					<h2>Description</h2>
-					<p>
-						Sun&Cloud is an application designed to provide real information about the weather in your city. It is an
-						ideal support tool for people who need to be informed about the weather conditions of places of interest.
-						Sun&Cloud provides all that data
-					</p>
-					<h2>Site Plan</h2>
-					<div>
-						<img src="/lesson2/assets/images/site-Plan.png" alt="Site Map" />
-					</div>
-				</div>
-			</section>
+			<div class="weather-plan-wireframes">
+				<img src="/lesson2/assets/images/wireframe-1.png" alt="" />
+				<img src="/lesson2/assets/images/wireframe-2.png" alt="" />
+			</div>
 		</main>
+
 		<footer class="weather-plan-footer">
 			<div class="weather-plan-info">
 				<p>
