chore: responsive home

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -24,7 +24,7 @@
 			<hr />
 			<h1>Weather Planning Document</h1>
 		</header>
-		<main>
+		<main class="weather-plan-home-main">
 			<section class="cards">
 				<div class="name-log-card card">
 					<h2>Name and Logo</h2>
