chore: menu working

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -48,17 +48,12 @@
 				<h1>Sun&Cloud</h1>
 				<h2>Weather News Anywhere</h2>
 			</div>
-			<div class="ham">
-				<a href=""></a>
-			</div>
 		</header>
 
 		<!-- NAVIGATION HERE -->
 		<nav>
 			<ul class="navigation">
-				<li>
-					<!-- <a href="#" class="ham"></a> -->
-				</li>
+				<li><a href="#" class="ham">Menu</a></li>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Products</a></li>
 				<li><a href="#">Location</a></li>
