chore: footer and main added

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -55,21 +55,34 @@
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Products</a></li>
-				<li><a href="#">Location</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="#">Preston</a></li>
+				<li><a href="#">Soda Springs</a></li>
+				<li><a href="#">Fish Haven</a></li>
+				<li><a href="#">Storm Center</a></li>
+				<li><a href="#">Gallery</a></li>
 			</ul>
 		</nav>
 
 		<!-- CONTENT HERE -->
-		<main>
-			<h1>Products</h1>
-			<p>The page name shoud almost exactly match the menu item. </p>
+		<main class="container">
+			<section class="cards">
+				<h3>Hero w/ weather summary</h3>
+			</section>
+			<section class="cards">
+				<h3>5 Day forecast</h3>
+			</section>
+			<section class="cards">
+				<h3>Article</h3>
+			</section>
+			<section class="cards">
+				<h3> Contact Information </h3>
+			</section>
 		</main>
 
 		<!-- FOOTER HERE -->
-		<footer>
-			<p>&copy; 201x &bull; Paul Cheney &bull; 123-555-6789</p>
+		<footer class="contact-info">
+			<p>&copy; <span class="year"></span> |The Sun&Cloud Weather Site | Attributions | Alan Crisanto |</p>
+			<p class="updated"></p>
 		</footer>
 
 		<script src="js/scripts.js"></script>
