Media queries medium and large

--- a/weather/preston.html
+++ b/weather/preston.html
@@ -22,15 +22,6 @@
 			rel="stylesheet"
 		/>
 
-		<!-- FONT AWESOME -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-
 		<!-- STYLE SHEETS -->
 		<link href="css/normalize.css" rel="stylesheet" />
 		<!-- phone-default -->
@@ -65,6 +56,9 @@
 
 		<!-- CONTENT HERE -->
 		<main class="container">
+			<article>
+				<h2>Preston Idaho</h2>
+			</article>
 			<section class="cards">
 				<h3>Hero w/ weather summary</h3>
 			</section>
