--- a/weather/preston.html
+++ b/weather/preston.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="Fill Me In" />
 		<meta name="author" content="Alan Crisanto" />
+		<meta name="description" content="Weather application to know the state of the weather in different cities. " />
 
 		<!-- This start file was build by Paul Cheney  -->
 		<title>Sun&Cloud Weather Site</title>
