--- a/weather/preston.html
+++ b/weather/preston.html
@@ -57,20 +57,113 @@
 
 		<!-- CONTENT HERE -->
 		<main class="container">
-			<article>
+			<secction class="hero-section">
 				<h2>Preston Idaho</h2>
+				<picture class="hero-image">
+					<img src="/weather/images/hero-img-2.jpg" alt="scenery photo" />
+				</picture>
+				<div class="hero-summary">
+					<h3>Weather Summary</h3>
+					<hr />
+					<div class="summary-description">
+						<div>
+							<h5>Currently: </h5>
+							<h5>High: </h5>
+							<h5>Wind Chill: </h5>
+							<h5>Humidity: </h5>
+							<h5>Wind Speed: </h5>
+						</div>
+						<div>
+							<h5>Sunny</h5>
+							<h5>76 °F</h5>
+							<h5>°F</h5>
+							<h5>69%</h5>
+							<h5>5 mph</h5>
+						</div>
+					</div>
+				</div>
+			</secction>
+
+			<section class="forecast">
+				<h3>Five Day Forecast</h3>
+				<div class="forecast-flex">
+					<div class="forecast-box">
+						<p>Wed</p>
+						<p>🌤️</p>
+					</div>
+					<div class="forecast-box">
+						<p>Thu</p>
+						<p>🌤️</p>
+					</div>
+					<div class="forecast-box">
+						<p>Fri</p>
+						<p>🌤️</p>
+					</div>
+					<div class="forecast-box">
+						<p>Sat</p>
+						<p>🌤️</p>
+					</div>
+					<div class="forecast-box">
+						<p>Sun</p>
+						<p>🌤️</p>
+					</div>
+					<div class="forecast-box">
+						<p>Wed</p>
+						<p>🌤️</p>
+					</div>
+				</div>
+			</section>
+			<article class="article">
+				<h3 class="article-title">Founders Day Fresco</h3>
+				<h4>Article Title</h4>
+				<p>
+					I was recently reflecting upon the founders day event held at Foundation Park each year. I have been taking
+					the festival for granted and have not been properly engaging in perhaps the most papular community event of
+					the year. In response, I contacted Ms. Sharon via email and expressed my desire to serve on the event
+					committee. Well, you guessed it, the phone rings almost immediately and she promptly asks me to be the event
+					committee chair. Literally, good grief! My appreciation for the years of dedicated, generous service of
+					volunteers and sponsors has escalated beyond what I thought I could feel for such a thing and...
+				</p>
+				<picture class="article-img">
+					<img src="/weather/images/hero-img-5.jpg" alt="" />
+				</picture>
 			</article>
-			<section class="cards">
-				<h3>Hero w/ weather summary</h3>
-			</section>
-			<section class="cards">
-				<h3>5 Day forecast</h3>
-			</section>
-			<section class="cards">
-				<h3>Article</h3>
-			</section>
-			<section class="cards">
-				<h3> Contact Information </h3>
+			<section class="contact-information">
+				<h3>Contact Information</h3>
+				<h4>Sun&Cloud Weather</h4>
+				<div class="contact">
+					<div class="contact-box">
+						<img src="https://img.icons8.com/office/16/FFFFFF/marker.png" />
+						<p>Jesus María, Peru</p>
+					</div>
+					<div class="contact-box">
+						<a href="https://api.whatsapp.com/send?phone=51996737936&text=Hello, more information!" target="_blank">
+							<img src="https://img.icons8.com/color/32/FFFFFF/whatsapp--v1.png" />
+						</a>
+						<p>+51996737936</p>
+					</div>
+				</div>
+				<div class="icons">
+					<a href="mailto:alanvcrisanto@gmail.com" target="_blank">
+						<img src="https://img.icons8.com/color/32/FFFFFF/gmail--v1.png" />
+					</a>
+					<a href="https://github.com/alancrisanto" target="_blank">
+						<img src="https://img.icons8.com/plasticine/32/FFFFFF/github.png" />
+					</a>
+					<a href="https://www.linkedin.com/in/alancrisanto/" target="_blank">
+						<img src="https://img.icons8.com/color/32/FFFFFF/linkedin-circled--v1.png" />
+					</a>
+				</div>
+				<iframe
+					class="contact-map"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1264.9205109653715!2d-77.04848385463056!3d-12.074564104908553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c9cb54278cb7%3A0x4087a9c355a45ca3!2sPlaza%20Diez%20Canseco!5e0!3m2!1ses-419!2spe!4v1655867683773!5m2!1ses-419!2spe"
+					width="400"
+					height="300"
+					style="border: 0"
+					allowfullscreen=""
+					loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"
+				></iframe>
 			</section>
 		</main>
 
