--- a/weather/preston.html
+++ b/weather/preston.html
@@ -2,9 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Fill Me In" />
-		<meta name="author" content="Alan Crisanto" />
 		<meta name="description" content="Weather application to know the state of the weather in different cities. " />
+		<meta name="author" content="Alan Crisanto" />
 
 		<!-- This start file was build by Paul Cheney  -->
 		<title>Sun&Cloud Weather Site</title>
@@ -32,7 +31,7 @@
 		<!-- enhance-desktop -->
 		<link href="css/large.css" rel="stylesheet" />
 	</head>
-	<body>
+	<body class="body">
 		<!-- HEADER HERE -->
 		<header class="preston-header">
 			<img src="/weather/images/sun&cloud.png" alt="" />
@@ -57,7 +56,7 @@
 
 		<!-- CONTENT HERE -->
 		<main class="container">
-			<secction class="hero-section">
+			<article class="hero-section">
 				<h2>Preston Idaho</h2>
 				<picture class="hero-image">
 					<img src="/weather/images/hero-img-2.jpg" alt="scenery photo" />
@@ -82,9 +81,9 @@
 						</div>
 					</div>
 				</div>
-			</secction>
+			</article>
 
-			<section class="forecast">
+			<article class="forecast">
 				<h3>Five Day Forecast</h3>
 				<div class="forecast-flex">
 					<div class="forecast-box">
@@ -112,13 +111,13 @@
 						<p>🌤️</p>
 					</div>
 				</div>
-			</section>
+			</article>
 			<article class="article">
 				<h3 class="article-title">Founders Day Fresco</h3>
 				<h4>Article Title</h4>
 				<div class="article-content clear-fix">
 					<picture class="article-img">
-						<img src="/weather/images/hero-img-5.jpg" alt="" />
+						<img src="/weather/images/hero-img-5.jpg" alt="river photo" />
 					</picture>
 					<p>
 						I was recently reflecting upon the founders day event held at Foundation Park each year. I have been taking
@@ -136,25 +135,25 @@
 					<h4>Sun&Cloud Weather</h4>
 					<div class="contact">
 						<div class="contact-box">
-							<img src="https://img.icons8.com/office/16/FFFFFF/marker.png" />
+							<img src="https://img.icons8.com/office/16/FFFFFF/marker.png" alt="location icon" />
 							<p>Jesus María, Peru</p>
 						</div>
 						<div class="contact-box">
-							<a href="https://api.whatsapp.com/send?phone=51996737936&text=Hello, more information!" target="_blank">
-								<img src="https://img.icons8.com/color/32/FFFFFF/whatsapp--v1.png" />
+							<a href="https://api.whatsapp.com/send?phone=51996737936&text=Hello" target="_blank">
+								<img src="https://img.icons8.com/color/32/FFFFFF/whatsapp--v1.png" alt="whatsapp icon" />
 							</a>
 							<p>+51996737936</p>
 						</div>
 					</div>
 					<div class="icons">
 						<a href="mailto:alanvcrisanto@gmail.com" target="_blank">
-							<img src="https://img.icons8.com/color/32/FFFFFF/gmail--v1.png" />
+							<img src="https://img.icons8.com/color/32/FFFFFF/gmail--v1.png" alt="gmail icon" />
 						</a>
 						<a href="https://github.com/alancrisanto" target="_blank">
-							<img src="https://img.icons8.com/plasticine/32/FFFFFF/github.png" />
+							<img src="https://img.icons8.com/plasticine/32/FFFFFF/github.png" alt="github icon" />
 						</a>
 						<a href="https://www.linkedin.com/in/alancrisanto/" target="_blank">
-							<img src="https://img.icons8.com/color/32/FFFFFF/linkedin-circled--v1.png" />
+							<img src="https://img.icons8.com/color/32/FFFFFF/linkedin-circled--v1.png" alt="linkedin icon" />
 						</a>
 					</div>
 				</div>
