chore: created image gallery

--- a/lesson4/lazyload.html
+++ b/lesson4/lazyload.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/lesson4/css/styles.css" />
 		<script src="/lesson4/JS/index.js" defer></script>
-		<title>Document</title>
+		<title>Lazy load</title>
 	</head>
 	<body>
 		<main>
