--- a/lesson2/typography.html
+++ b/lesson2/typography.html
@@ -8,6 +8,13 @@
 		<link rel="stylesheet" href="/lesson2/css/styles.css" />
 		<link rel="stylesheet" href="/lesson2/css/midium.css" />
 		<link rel="stylesheet" href="/lesson2/css/small.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<title>🌤️ Weather Site Plan</title>
 	</head>
 	<body>
@@ -33,8 +40,9 @@
 			<div class="weather-plan-info">
 				<p>
 					&copy; <span id="year"></span> | Alan Crisanto | Lima |
-					<a href="https://www.byui.edu/online">https://www.byui.edu/online</a></p
-				>
+					<a href="https://www.byui.edu/online">https://www.byui.edu/online</a>
+					| <a href="/index.html"><i class="fa-solid fa-share"></i>Home</a>
+				</p>
 				<p id="updated"></p>
 			</div>
 		</footer>
