update zip code type input

--- a/lesson4/stormcenter.html
+++ b/lesson4/stormcenter.html
@@ -67,7 +67,7 @@
 						<label class="top">Email <input type="email" name="email" placeholder="email@domain.com" /></label>
 						<label class="top">Phone Number <input type="tel" name="phone" placeholder="123456789" required /></label>
 						<label class="top"
-							>Zip Code <input type="number" name="zcode" placeholder="" pattern="(\d{5}([\-]\d{4})?)" required
+							>Zip Code <input type="text" name="zcode" placeholder="07051" pattern="(\d{5}([\-]\d{4})?)" required
 						/></label>
 					</fieldset>
 
