added color to input focus

--- a/lesson4/stormcenter.html
+++ b/lesson4/stormcenter.html
@@ -57,7 +57,7 @@
 		<!-- CONTENT HERE -->
 		<main class="container">
 			<div class="form">
-				<form action="">
+				<form action="#">
 					<fieldset>
 						<legend>User Information</legend>
 						<label class="top"
@@ -109,7 +109,7 @@
 						<legend>Additional Information</legend>
 
 						<label class="top">
-							<textarea name="comments" id="" cols="30" rows="10">Enter text here</textarea>
+							<textarea name="comments" cols="30" rows="10">Enter text here</textarea>
 						</label>
 					</fieldset>
 					<input class="submitBtn" type="submit" value="Send Information" />
