link to home added

--- a/lesson-9/prophets.html
+++ b/lesson-9/prophets.html
@@ -25,7 +25,7 @@
 		<main>
 			<div class="cards"></div>
 		</main>
-		<footer> Alan Crisanto | BYU Idaho | WDD 230 </footer>
+		<footer> Alan Crisanto | BYU Idaho | WDD 230 | <a href="/index.html">Home</a></footer>
 		<script src="/lesson-9/JS/prophets.js"></script>
 	</body>
 </html>
