--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -23,13 +23,13 @@
 		/>
 
 		<!-- STYLE SHEETS -->
-		<link rel="stylesheet" href="/weather/css/normalize.css" />
+		<link href="/weather/css/normalize.css" rel="stylesheet" />
 		<!-- phone-default -->
-		<link rel="stylesheet" href="/weather/css/small.css" />
+		<link href="/weather/css/small.css" rel="stylesheet" />
 		<!-- enhance-tablet -->
-		<link rel="stylesheet" href="/weather/css/medium.css" />
+		<link href="/weather/css/medium.css" rel="stylesheet" />
 		<!-- enhance-desktop -->
-		<link rel="stylesheet" href="/weather/css/large.css" />
+		<link href="/weather/css/large.css" rel="stylesheet" />
 	</head>
 	<body class="body">
 		<!-- HEADER HERE -->
@@ -45,76 +45,17 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="/weather/preston.html">Home</a></li>
+				<li><a href="#">Home</a></li>
 				<li><a href="#">Preston</a></li>
 				<li><a href="#">Soda Springs</a></li>
 				<li><a href="#">Fish Haven</a></li>
-				<li><a href="stormcenter.html">Storm Center</a></li>
+				<li><a href="/lesson4/stormcenter.html">Storm Center</a></li>
 				<li><a href="/lesson4/gallery-7.html">Gallery</a></li>
 			</ul>
 		</nav>
 
 		<!-- CONTENT HERE -->
 		<main class="container">
-			<div class="form">
-				<form action="#">
-					<fieldset>
-						<legend>User Information</legend>
-						<label class="top"
-							>Full name
-							<input type="text" name="fname" placeholder="Full Name" required pattern="[A-Za-z\s]{5,}" />
-						</label>
-						<label class="top">Email <input type="email" name="email" placeholder="email@domain.com" /></label>
-						<label class="top">Phone Number <input type="tel" name="phone" placeholder="123456789" required /></label>
-						<label class="top"
-							>Zip Code <input type="text" name="zcode" placeholder="07051" pattern="(\d{5}([\-]\d{4})?)" required
-						/></label>
-					</fieldset>
-
-					<fieldset>
-						<legend> Storm Information </legend>
-
-						<label class="top">Storm Date <input type="date" name="date" /></label>
-						<label class="top">
-							Storm Type
-							<input type="text" name="storm-type" list="storm-type" />
-							<datalist id="storm-type">
-								<option value="Flash Food"> </option><option value="Hail"> </option><option value="Hurricane"> </option
-								><option value="Thunderstorm"> </option><option value="Tornado"> </option
-							></datalist>
-						</label>
-
-						<label class="range">
-							Storm Severity
-							<input type="range" name="severity" min="1" max="10" step="1" />
-						</label>
-						<label class="top"
-							>Storm Region
-							<select>
-								<option value="" disabled selected>Please Select &#9662;</option>
-								<option value="preston">Preston</option>
-								<option value="soda">Soda Spring</option>
-								<option value="haven">Fish Haven</option>
-							</select>
-						</label>
-					</fieldset>
-					<fieldset>
-						<legend>Danger</legend>
-						<div class="danger-title">User in-danger Level</div>
-						<label class="danger"><input type="radio" name="danger" /> Yes</label>
-						<label class="danger"><input type="radio" name="danger" /> No</label>
-						<label class="danger"><input type="radio" name="danger" /> Maybe</label>
-					</fieldset>
-					<fieldset>
-						<legend>Additional Information</legend>
-
-						<label class="top">
-							<textarea name="comments" cols="30" rows="10">Enter text here</textarea>
-						</label>
-					</fieldset>
-					<input class="submitBtn" type="submit" value="Send Information" />
-				</form>
-			</div>
 			<section class="contact-information">
 				<div class="information">
 					<h3>Contact Information</h3>
@@ -162,6 +103,7 @@
 			<p class="updated"></p>
 		</footer>
 
-		<script src="/weather/js/scripts.js"></script>
+		<script src="js/scripts.js"></script>
+		<script src="js/windchill.js"></script>
 	</body>
 </html>
