--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -56,6 +56,7 @@
 
 		<!-- CONTENT HERE -->
 		<main class="container">
+			<section class="town"> </section>
 			<section class="contact-information">
 				<div class="information">
 					<h3>Contact Information</h3>
@@ -103,7 +104,6 @@
 			<p class="updated"></p>
 		</footer>
 
-		<script src="js/scripts.js"></script>
-		<script src="js/windchill.js"></script>
+		<script src="/weather/js/scripts.js"></script>
 	</body>
 </html>
