--- a/lesson4/stormcenter.html
+++ b/lesson4/stormcenter.html
@@ -77,11 +77,14 @@
 						<label class="top">Storm Date <input type="date" name="date" /></label>
 						<label class="top">
 							Storm Type
-							<input type="text" name="storm-type" list="storm-type" />
+							<input name="storm-type" list="storm-type" />
 							<datalist id="storm-type">
-								<option value="Flash Food"> </option><option value="Hail"> </option><option value="Hurricane"> </option
-								><option value="Thunderstorm"> </option><option value="Tornado"> </option
-							></datalist>
+								<option value="Flash Flood"></option>
+								<option value="Hail"></option>
+								<option value="Hurricane"></option>
+								<option value="Thunderstorm"></option>
+								<option value="Tornado"></option>
+							</datalist>
 						</label>
 
 						<label class="range">
