--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -31,7 +31,7 @@
 		<!-- enhance-desktop -->
 		<link href="/weather/css/large.css" rel="stylesheet" />
 	</head>
-	<body class="body">
+	<body class="body town-body">
 		<!-- HEADER HERE -->
 		<header class="preston-header">
 			<img src="/weather/images/sun&cloud.png" alt="" />
@@ -57,6 +57,7 @@
 		<!-- CONTENT HERE -->
 		<main class="container">
 			<section class="town"> </section>
+
 			<section class="contact-information">
 				<div class="information">
 					<h3>Contact Information</h3>
