--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -56,7 +56,7 @@
 
 		<!-- CONTENT HERE -->
 		<main class="container">
-			<section class="town"> </section>
+			<div class="town"> </div>
 
 			<section class="contact-information">
 				<div class="information">
