add link to weather API test

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<li>Lesson 02: <a href="/lesson2/index.html">Website Planning Document</a></li>
 					<li>Lesson 02: <a href="/weather/preston.html">Preston Town Page Start</a></li>
 					<li>Lesson 05: <a href="/lesson-9/prophets.html">Prophets</a></li>
+					<li>Lesson 05: <a href="/lesson-10/api-test.html">Weather API Test</a></li>
 				</ul>
 			</div>
 		</section>
