set the forecast with current information

--- a/lesson-10/preston-10.html
+++ b/lesson-10/preston-10.html
@@ -92,30 +92,30 @@
 			<article class="forecast">
 				<h3>Five Day Forecast</h3>
 				<div class="forecast-flex">
-					<div class="forecast-box">
-						<p>Wed</p>
-						<p>🌤️</p>
+					<!-- <div class="forecast-box">
+						<p id="day1">Wed</p>
+						<p id="icon1">🌤️</p>
 					</div>
 					<div class="forecast-box">
-						<p>Thu</p>
-						<p>🌤️</p>
+						<p id="day2">Thu</p>
+						<p id="icon2">🌤️</p>
 					</div>
 					<div class="forecast-box">
-						<p>Fri</p>
-						<p>🌤️</p>
+						<p id="day3">Fri</p>
+						<p id="icon3">🌤️</p>
 					</div>
 					<div class="forecast-box">
-						<p>Sat</p>
-						<p>🌤️</p>
+						<p id="day4">Sat</p>
+						<p id="icon4">🌤️</p>
 					</div>
 					<div class="forecast-box">
-						<p>Sun</p>
-						<p>🌤️</p>
+						<p id="day5">Sun</p>
+						<p id="icon5">🌤️</p>
 					</div>
 					<div class="forecast-box">
-						<p>Wed</p>
+						<p id="day">Wed</p>
 						<p>🌤️</p>
-					</div>
+					</div> -->
 				</div>
 			</article>
 			<article class="article">
